# Artificial-cell-generation

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
examples/: generate_dataset.py  generate_dataset_multiprocess.py
requirements/: test.txt
src/cellgen/background/: __init__.py  background.py  erythrocyte.py
src/cellgen/cells/: base.py  cell_body.py  monocyte.py  neutrophil.py
src/cellgen/composition/: __init__.py  placement.py
src/cellgen/nucleus/: neutrophil.py
src/cellgen/utils/: blob.py  colormap.py  interpolation.py
src/scripts/: binary_blob_gen_skimage.py  colormap.py  dft_test.py  gen_blob.py  gen_blobs_gauss.py  gen_blobs_skiimage.py  scipy_gen_blob.py  utils.py
src/scripts_legacy/: README.md  binary_blob_gen_skimage.py  gen_blob.py  gen_blob_ez.py  gen_blobs_gauss.py  gen_blobs_skiimage.py
tests/: conftest.py  test_background.py  test_blob_generation.py  test_cell_body.py  test_interpolation.py  test_monocyte.py  test_neutrophil.py  test_nucelus.py  test_nucleus_coloring.py
