[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellgen"
version = "0.1.0"
description = "Artificial cell image generation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Krunoslav Petrik", email = "petrik.kpetrik@gmail.com" }]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
