[metadata]
name = cellgen
version = 0.1.0
description = Artificial cell image generation
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    numpy
    matplotlib
    opencv-python
    scipy
    scikit-image

[options.packages.find]
where = src
